--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<hr>
 				
 				<div class="centered">
-					<p>Lollipop cotton candy marshmallow donut jujubes liquorice candy canes applicake chocolate cake. Jujubes jelly chocolate. Icing dragée muffin jelly-o candy canes ice cream. Sugar plum gingerbread pudding tiramisu. Pudding cotton candy dragée powder chocolate bar tart. Bonbon chupa chups oat cake marshmallow wafer pie. Topping lemon drops muffin sweet wafer bonbon dragée. Tiramisu pastry gummies topping wafer. Gingerbread dragée tootsie roll marshmallow soufflé liquorice sweet toffee gummi bears. Tart dessert cheesecake carrot cake chupa chups tiramisu. Croissant chocolate bar marzipan sesame snaps wafer chocolate wafer cookie applicake. Fruitcake cheesecake applicake.</p>
+					<p>Lollipop cotton candy marshmallow donut jujubes liquorice candy canes applicake chocolate cake. Jujubes jelly chocolate. Icing dragée muffin jelly-o candy canes ice cream. Sugar plum gingerbread pudding tiramisu. Pudding cotton candy dragée powder chocolate bar tart. Bonbon chupa chups oat cake marshmallow wafer pie. Topping lemon drops muffin sweet wafer bonbon dragée. Tiramisu pastry gummies topping wafer. Gingerbread dragée tootsie roll marshmallow soufflé liquorice sweet toffee gummi bears. Tart dessert cheesecake carrot cake chupa chups tiramisu.</p>
 				</div><!-- col-lg-6 -->
 			</div><!-- row -->
 		</div><!-- container -->
