--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 				
 				<div class="centered">
 					<p>We Love Aural is a rotation curation account on twitter. A different twitter user runs the account each week, taking over on a Monday, the time of which can vary depending on your location in the world, for example, in Australia it’s on a Monday night, in the UK it’s on a Monday morning, the times can be provided to you based on knowledge of your local time zone. A new user each week, a new perspective on music, a chance to revisit or be reminded of classics. It can be a very universal thing, and not only that, musicians are free to share their own music if they so wish. Loving music is not just about listening to it.We commonly hear people say “I like this song/band, but don’t judge me”, and this is what prompted us to go ahead and make the account, as we’ve always felt that music can mean a lot to some people, and they shouldn’t be ashamed to like a particular artist. Please follow, and enjoy</p>
+					<p>A full tweet archive can be found <a href="tweets/tweets.html">HERE</a></p>
 				</div><!-- col-lg-6 -->
 			</div><!-- row -->
 		</div><!-- container -->
