--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 					<br>
 					<h4><b>destroy_robots</b></h4>
 					<a href="https://twitter.com/destroy_robots" class="icon icon-twitter"></a>
+					<a href="http://www.last.fm/user/destroyrobots" class="icon icon-headphones"></a>
 					<p>Head Admin</p>
 				</div><!-- col-lg-3 -->
 				
@@ -134,6 +135,7 @@
 					<br>
 					<h4><b>phantomdiorama</b></h4>
 					<a href="https://twitter.com/phantomdiorama" class="icon icon-twitter"></a>
+					<a href="http://www.last.fm/user/tree_and_kite" class="icon icon-headphones"></a>
 					<p>Co-Admin / Web Guy</p>
 				</div><!-- col-lg-3 -->
 							
