--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<br>
 				<div class="col-lg-4 centered">
 					<!--<h3>Contact Information</h3> -->
-					<p><a href="mailto:loveaural@yahoo.com" class="icon icon-envelop"></span></a>
+					<p><a href="mailto:loveaural@yahoo.com.au" class="icon icon-envelop"></span></a>
 				</div>
 				<div class="col-lg-4 centered">
 					   <a href="http://www.twitter.com/we_love_aural" class="icon icon-twitter"></span></a>
