--- a/index.html
+++ b/index.html
@@ -293,6 +293,14 @@
 					<!-- <a href="" class="icon icon-youtube"></a> -->
 				</div><!-- col-lg-3 -->
 				
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/trevwashere.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>trevwashere</b></h4>
+					<a href="https://twitter.com/trevwashere" class="icon icon-twitter"></a>
+					<!-- <a href="" class="icon icon-youtube"></a> -->
+				</div><!-- col-lg-3 -->
+				
 			</div><!-- row -->
 		<br>
 		<br>
