--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
 						<h5>Published 09/03/2014</h5>
 					</div>
 					<div class="col-lg-8 blog-content">
-						<p><img src="assets/img/totp.png"></p>
+					<div class="erb-image-wrapper">
+						<p><center><img src="assets/img/totp.png"></center></p>
+					</div>
 						<p><p>It&rsquo;s been a while since we&rsquo;ve done one of these. We&rsquo;ve been distracted by the site move and holidays and loss of internet (scary). Now that everything has calmed down we hope to make this a more regular thing. Anyway here is the week&rsquo;s links:</p>
 
 						<ul>
@@ -306,7 +308,7 @@
 					<br>
 					<h4><b>Smiffy</b></h4>
 					<a href="https://twitter.com/Smiffy" class="icon icon-twitter"></a>
-					<!-- <a href="" class="icon icon-youtube"></a> -->
+					<a href="http://www.youtube.com/playlist?list=PLPGLKSB3q1B5EDmJ_W3XTJQVqkP5cU4-m" class="icon icon-youtube"></a>
 				</div><!-- col-lg-3 -->
 				
 				<div class="col-lg-3 centered">
@@ -315,6 +317,20 @@
 					<h4><b>trevwashere</b></h4>
 					<a href="https://twitter.com/trevwashere" class="icon icon-twitter"></a>
 					<!-- <a href="" class="icon icon-youtube"></a> -->
+				</div><!-- col-lg-3 -->
+								<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/snuff_smith.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>Snuff Smith</b></h4>
+					<a href="https://twitter.com/snuff_smith" class="icon icon-twitter"></a>
+					<!-- <a href="" class="icon icon-youtube"></a> -->
+				</div><!-- col-lg-3 -->
+								<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/team/mike.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>phantomdiorama</b></h4>
+					<a href="https://twitter.com/phantomdiorama" class="icon icon-twitter"></a>
+					<a href="http://www.youtube.com/playlist?list=PLPGLKSB3q1B5n_EulATtBsCe3sLeiNb2v" class="icon icon-youtube"></a>
 				</div><!-- col-lg-3 -->
 				
 			</div><!-- row -->
