--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon icon-bookmark" style="font-size:30px; color:#3498db;"></span>
+            <span class="icon icon-bookmarks" style="font-size:30px; color:#3498db;"></span>
           </button>
           <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-bookmarks" style="font-size:18px; color:#3498db;"></span></a>
         </div>
