--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="col-lg-4 centered">
 					<img class="img img-circle" src="assets/img/team/danie.jpg" height="120px" width="120px" alt="">
 					<br>
-					<h4><b>DanieTeg</b></h4>
+					<h4><b>DanieTreg</b></h4>
 					<a href="https://twitter.com/danietreg" class="icon icon-twitter"></a>
 					<p>Co-Admin</p>
 				</div><!-- col-lg-3 -->
