--- a/index.html
+++ b/index.html
@@ -306,6 +306,13 @@
 					<br>
 					<br>
 				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/elcid18.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>elcid18</b></h4>
+					<a href="https://twitter.com/elcid18" class="icon icon-twitter"></a>
+					<a href="http://storify.com/destroyrobots/john-elcid18?utm_content=storify-pingback&utm_medium=sfy.co-twitter&utm_campaign=&utm_source=direct-sfy.co&awesm=sfy.co_hecH" class="icon icon-quotes-left"></a>
+				</div><!-- col-lg-3 -->
 				
 			</div><!-- row -->
 		<br>
