--- a/index.html
+++ b/index.html
@@ -160,11 +160,12 @@
 					<br>
 						<p><img class="img img-circle" src="assets/img/team/mike.jpg" width="60px" height="60px"></p>
 						<h4>Mike</h4>
-						<h5>Published 17/03/2014</h5>
+						<h5>Published 24/03/2014</h5>
 					</div>
 					<div class="col-lg-8 blog-content">
 						<h2>Storify</h2>
 						<p>As of today we are Storifying curators tweets as well as youtube-ing them. This change means people can see why you, the curator, chose the songs you chose. We at WLA think the <em>why</em> is as important as the <em>what</em>.</p>
+						<p>UPDATE: Our collection of music links from around the web, Top Of The Pops, is now an always up-to-date Bit.ly bundle available <a href="http://bitly.com/bundles/phantomdiorama/1">here</a>
 						<br>
 						<br>
 					</div>
