--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
 					<a href="https://twitter.com/elcid18" class="icon icon-twitter"></a>
 					<a href="http://storify.com/destroyrobots/john-elcid18?utm_content=storify-pingback&utm_medium=sfy.co-twitter&utm_campaign=&utm_source=direct-sfy.co&awesm=sfy.co_hecH" class="icon icon-quotes-left"></a>
 				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/team/nick.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>destroy_robots</b></h4>
+					<a href="https://twitter.com/destroy_robots" class="icon icon-twitter"></a>
+					<a href="https://storify.com/destroyrobots/nick-destroy-robots" class="icon icon-quotes-left"></a>
+				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/billablog.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>Billablog</b></h4>
+					<a href="https://twitter.com/billablog" class="icon icon-twitter"></a>
+					<!--<a href="" class="icon icon-quotes-left"></a>-->
+				</div><!-- col-lg-3 -->
 				
 			</div><!-- row -->
 		<br>
