+ added storify link

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 					<br>
 					<h4><b>Billablog</b></h4>
 					<a href="https://twitter.com/billablog"><img src="assets/img/twitter.png" height="20px"></a>
-					<!--<a href="" class="icon icon-quotes-left"></a>-->
+					<a href="https://storify.com/destroyrobots/bill-billablog"><img src="assets/img/storify.jpg" height="20px"></a>
 				</div><!-- col-lg-3 -->
 				
 			</div><!-- row -->
