--- a/index.html
+++ b/index.html
@@ -327,6 +327,22 @@
 					<a href="https://twitter.com/billablog"><img src="assets/img/twitter.png" height="20px"></a>
 					<a href="https://storify.com/destroyrobots/bill-billablog"><img src="assets/img/storify.jpg" height="20px"></a>
 				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/prhuffinstuff.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>prhuffinstuff</b></h4>
+					<a href="https://twitter.com/prhuffinstuff"><img src="assets/img/twitter.png" height="20px"></a>
+					<a href="https://storify.com/destroyrobots/p-rock-prhuffinstuff"><img src="assets/img/storify.jpg" height="20px"></a>
+					<br>
+					<br>
+				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/byrnzyp.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>byrnzyp</b></h4>
+					<a href="https://twitter.com/byrnzyp"><img src="assets/img/twitter.png" height="20px"></a>
+					<a href="https://storify.com/destroyrobots/peter-byrnzyp"><img src="assets/img/storify.jpg" height="20px"></a>
+				</div><!-- col-lg-3 -->
 				
 			</div><!-- row -->
 		<br>
