--- a/index.html
+++ b/index.html
@@ -343,6 +343,28 @@
 					<a href="https://twitter.com/byrnzyp"><img src="assets/img/twitter.png" height="20px"></a>
 					<a href="https://storify.com/destroyrobots/peter-byrnzyp"><img src="assets/img/storify.jpg" height="20px"></a>
 				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/simebo.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>simebo</b></h4>
+					<a href="https://twitter.com/simebo"><img src="assets/img/twitter.png" height="20px"></a>
+					<a href="https://storify.com/destroyrobots/simon-simebo-1"><img src="assets/img/storify.jpg" height="20px"></a>
+				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/geraldmellor.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>geraldmellor</b></h4>
+					<a href="https://twitter.com/geraldmellor"><img src="assets/img/twitter.png" height="20px"></a>
+					<a href="https://storify.com/destroyrobots/gerry-geraldmellor"><img src="assets/img/storify.jpg" height="20px"></a>
+				</div><!-- col-lg-3 -->
+				<div class="col-lg-3 centered">
+					<img class="img img-circle" src="assets/img/curators/halfwrittentale.jpg" height="120px" width="120px" alt="">
+					<br>
+					<h4><b>halfwrittentale</b></h4>
+					<a href="https://twitter.com/halfwrittentale"><img src="assets/img/twitter.png" height="20px"></a>
+					<a href="https://storify.com/destroyrobots/rachael-halfwrittentale"><img src="assets/img/storify.jpg" height="20px"></a>
+				</div><!-- col-lg-3 -->
+				
 				
 			</div><!-- row -->
 		<br>
