--- a/index.html
+++ b/index.html
@@ -39,19 +39,16 @@
             </header>
             <div class="centered">
             	<h2>ABOUT US</h2>
-				<p style="font-size:24px">We Love Aural is a rotation curation social media account for lovers of music everywhere. Since our launch in December 2013 a new host has taken us on a musical journey each week. Whether it's every song they've ever loved from their birth to present day, a collection of meaningful tunes and clips or even a deep look at a particular genre, each one had brought something different, something wonderful. Here at WLA we know music means something different to everyone. We also know music <b>means</b> something to everyone. And that's why we love aural (heh)
+				<p style="font-size:24px">We Love Aural is a rotation curation social media account for lovers of music everywhere. Since our launch in December 2013 a new host has taken us on a musical journey each week. Whether it's every song they've ever loved from their birth to present day, a collection of meaningful tunes and clips or even a deep look at a particular genre, each one has brought something different, something wonderful. Here at WLA we know music means something different to everyone. We also know music <b>means</b> something to everyone. And that's why we love aural (heh)
 				<br>
 				<br>
-				CHECK US OUT ON <a href="https://twitter.com/we_love_aural">TWIITER</a>
+				CHECK US OUT ON <a href="https://twitter.com/we_love_aural"><b>TWITTER</b></a>
 				</p>
 			</div>
 			<div class="centered">
             	<h2>INTERESTED?</h2>
-				<p style="font-size:24px">Interested in hosting? Or want more info? Simply contact using the link above or contact Nick directly <a href="https://twitter.com/destroy_robots">here</a>. Want to know what our previous hosts were up to? Check out our <a href="https://storify.com/destroyrobots">Storify</a> and <a href="https://www.youtube.com/channel/UCZEJs8WrDRItoaqng-XFOow/playlists">YouTube</a> channels.
+				<p style="font-size:24px">Interested in hosting? Or want more info? Simply contact using the link above or contact Nick directly <a href="https://twitter.com/destroy_robots"><b>here</b></a>. Want to know what our previous hosts were up to? Check out our <a href="https://storify.com/destroyrobots"><b>Storify</b></a> and <a href="https://www.youtube.com/channel/UCZEJs8WrDRItoaqng-XFOow/playlists"><b>YouTube</b></a> channels. (Images supplied by <a href="http://fanart.tv/"><b>Fanart.tv</b></a>) 
 				</p>
-			</div>
-			<div style="position:fixed;bottom:0;height:auto;margin-top:40px">
-				<a href="http://fanart.tv/"><img src="assets/img/fanart.png"/></a>
 			</div>
 
 			
