--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="centered">
             	<h2>INTERESTED?</h2>
-				<p style="font-size:24px">Interested in hosting? Or want more info? Simply contact using the link above or contact Nick directly <a href="https://twitter.com/destroy_robots"><b>here</b></a>. Want to know what our previous hosts were up to? Check out our <a href="https://storify.com/destroyrobots"><b>Storify</b></a> and <a href="https://www.youtube.com/channel/UCZEJs8WrDRItoaqng-XFOow/playlists"><b>YouTube</b></a> channels. (Images supplied by <a href="http://fanart.tv/"><b>Fanart.tv</b></a>) 
+				<p style="font-size:24px">Interested in hosting? Or want more info? Simply contact us using the link above or contact Nick directly <a href="https://twitter.com/destroy_robots"><b>here</b></a>. Want to know what our previous hosts were up to? Check out our <a href="https://storify.com/destroyrobots"><b>Storify</b></a> and <a href="https://www.youtube.com/channel/UCZEJs8WrDRItoaqng-XFOow/playlists"><b>YouTube</b></a> channels. (Images supplied by <a href="http://fanart.tv/"><b>Fanart.tv</b></a>) 
 				</p>
 			</div>
 
